--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.775</string>
-    <string name="version">Version: 1.775</string>
+    <string name="version_code">1.776</string>
+    <string name="version">Version: 1.776</string>
 
     <string name="app_name">Taxi Dostavka</string>
 
@@ -63,7 +63,7 @@
     <string name="help">Support</string>
     <string name="show_to_point">Show destination</string>
     <string name="change">by GPS</string>
-    <string name="on_city">"around the city."</string>
+    <string name="on_city">"around the city"</string>
     <string name="on_city_tv">"around the city"</string>
     <string name="help_button">Support</string>
     <string name="try_again">Reboot</string>
@@ -107,7 +107,7 @@
     <string name="FUEL">Fuel delivery</string>
     <string name="WIRES">Wire</string>
     <string name="SMOKE">I will smoke</string>
-    <string name="add_services">Additional</string>
+    <string name="add_services">Options</string>
     <string name="time_limit">Execution time exceeded</string>
     <string name="slow_internet">Low internet speed</string>
     <string name="update_message">An update is required</string>
@@ -132,12 +132,13 @@
     <string name="no_routs">No routes</string>
     <string name="cheng">Change</string>
     <string name="delete_routs">delete</string>
-    <string name="text_result">Trip information</string>
+    <string name="text_result">Your route</string>
     <string name="btn_again_text">Order again</string>
     <string name="textStatus">Order status</string>
     <string name="cancel_order">Cancel order</string>
     <string name="ex_st_1">Waiting for machine search (for pre-order)</string>
     <string name="ex_st_2">Found machine.</string>
+    <string name="ex_st_2_1">The car is ready to board. Get out, the driver is waiting for you.</string>
     <string name="ex_st_3">" Car number: "</string>
     <string name="ex_st_4">" Driver's phone: "</string>
     <string name="ex_st_5">" Estimated submission time: "</string>
@@ -191,9 +192,9 @@
     <string name="close_resone_9">Removed by customer</string>
     <string name="close_resone_from">"From "</string>
     <string name="close_resone_to">" -> "</string>
-    <string name="close_resone_cost">", cost: "</string>
-    <string name="close_resone_time">", order time: "</string>
-    <string name="close_resone_text">", status: "</string>
+    <string name="close_resone_cost">"cost: "</string>
+    <string name="close_resone_time">"order time: "</string>
+    <string name="close_resone_text">"status: "</string>
     <string name="startPoint">Place of landing</string>
     <string name="my_bonus">"Available bonuses: "</string>
     <string name="add_bonus">"You have been credited"</string>
@@ -288,10 +289,26 @@
     <string name="drag_marker_bottom">Click on the marker and drag it to refine the location</string>
     <string name="menu_city">Order </string>
     <string name="city_kyiv">Kyiv city and region</string>
-    <string name="city_dnipro">city of Dnipro</string>
-    <string name="city_odessa">Odessa city</string>
-    <string name="city_zaporizhzhia">Zaporizhzhia</string>
-    <string name="city_cherkasy">Cherkasy city</string>
+    <string name="city_cherkassy">Cherkassy</string>
+    <string name="city_odessa">Odessa</string>
+    <string name="city_zaporizhzhia">Zaporizhzhya</string>
+    <string name="city_dnipro">Dnipro</string>
+    <string name="city_lviv">Lviv</string>
+    <string name="city_ivano_frankivsk">Ivano-Frankivsk</string>
+    <string name="city_vinnytsia">Vinnytsia</string>
+    <string name="city_poltava" >Poltava</string>
+    <string name="city_sumy">Sumi</string>
+    <string name="city_kharkiv">Kharkiv</string>
+    <string name="city_chernihiv">Chernihiv</string>
+    <string name="city_rivne">Rivne</string>
+    <string name="city_ternopil">Ternopil</string>
+    <string name="city_khmelnytskyi">Khmelnytskyi</string>
+    <string name="city_zakarpattya">Zakarpattya</string>
+    <string name="city_zhytomyr">Zhytomyr</string>
+    <string name="city_kropyvnytskyi">Kropyvnytskyi</string>
+    <string name="city_mykolaiv">Mykolaiv</string>
+    <string name="city_chernivtsi">Chernivtsi</string>
+    <string name="city_lutsk">Lutsk</string>
     <string name="tail1">Maps for the city \'</string>
     <string name="tail2">\' uploaded successfully</string>
     <string name="rout_fin">Select a house number from the list</string>
@@ -327,13 +344,13 @@
     <string name="upload">Uploading update...</string>
     <string name="update_ok">You have the latest version installed. No need to update the app.</string>
     <string name="phone_driver">Call the driver</string>
-    <string name="auto_info">, auto</string>
+    <string name="auto_info">auto</string>
     <string name="city_no_cards">Bank card payment is not available in this settlement. We will notify you when payment by bank cards becomes available.</string>
-    <string name="pos_k">Str. Khreschatyk 16, Kyiv city\t</string>
-    `<string name="pos_d">Prospekt Dmytro Yavornytskyi (Karl Marxa), building 52, city of Dnipro\t</string>
-    <string name="pos_o">Panteleymonivska St., bldg. 64, Odesa city\t</string>
-    <string name="pos_z">Ave. Soborny, bldg. 139, city of Zaporozhye\t</string>
-    <string name="pos_c">Baidy Vyshnevetskoho str., building 36, Cherkasy city\t</string>
+    <string name="pos_k">Str. Khreschatyk 16, Kyiv\t</string>
+    `<string name="pos_d">Prospekt Dmytro Yavornytskyi (Karl Marxa), building 52, Dnipro\t</string>
+    <string name="pos_o">Panteleymonivska St., bldg. 64, Odesa\t</string>
+    <string name="pos_z">Ave. Soborny, bldg. 139, Zaporozhye\t</string>
+    <string name="pos_c">Baidy Vyshnevetskoho str., building 36, Cherkasy\t</string>
     <string name="cancel_gps">Cancel</string>
     <string name="ok_error">Understood</string>
     <string name="to_nal_payment">You have a limit on the order amount for this type of payment. To change, contact the operators. Order for cash now?</string>
@@ -351,10 +368,10 @@
     <string name="cancel_2">Order cancellation request sent. Requires client confirmation of control room cancellation.</string>
     <string name="cancel_3">Order cancellation request sent. Find out the status of the trip from the dispatcher.</string>
     <string name="test_city">Тest</string>
-    <string name="pay_method_message_main">Payment for trip</string>
-    <string name="pay_method_message_bonus">bonuses. Have a nice trip.</string>
-    <string name="pay_method_message_card">bank card. Have a nice trip.</string>
-    <string name="pay_method_message_nal">cash to the driver. Have a nice trip.</string>
+    <string name="pay_method_message_main"></string>
+    <string name="pay_method_message_bonus">bonuses</string>
+    <string name="pay_method_message_card">bank card</string>
+    <string name="pay_method_message_nal">cash to the driver</string>
     <string name="location_on">Enable PRECISION location in Permissions</string>
     <string name="start_t">Start</string>
     <string name="base_onl_t">Basic online</string>
@@ -406,4 +423,45 @@
     <string name="on_now">On now</string>
     <string name="on">On</string>
     <string name="time_order">" Car delivery on "</string>
+    <string name="pos_l">Mitskevich sq., 8, Lviv</string>
+    <string name="pos_h">"Sumska str., 5, Kharkiv "</string>
+    <string name="pos_m">"Admiralska str., 27, Mykolaiv "</string>
+    <string name="pos_v">Soborna str., 50, Vinnytsia</string>
+    <string name="pos_s">Soborna str., 43, Sumy</string>
+    <string name="pos_ch">Kotsiubynskoho str., 58, Chernihiv</string>
+    <string name="pos_if">Nezavisimosti str., 17, Ivano-Frankivsk</string>
+    <string name="pos_p">pl. Nezalezhnosti, 5, Poltava</string>
+    <string name="pos_r">"Soborna St., 137, Rivne "</string>
+    <string name="pos_t">Perlya St., 3, Ternopil</string>
+    <string name="pos_kh">Chornovola St., 7, Khmelnytskyi</string>
+    <string name="pos_uz">Novaka St., 14, Uzhgorod</string>
+    <string name="pos_zt">Vostochna St., 78, Zhytomyr</string>
+    <string name="pos_kr">Shevchenko St., 15, Kropyvnytskyi</string>
+    <string name="pos_chr">Khudiakova St., 1, Chernivtsi</string>
+    <string name="pos_ltk">Zamkova Street, 7, Lutsk</string>
+    <string name="text_cost">Payment</string>
+    <string name="textStatusCar">Car information</string>
+    <string name="timer_finished">Timer finished</string>
+    <string name="close_timer">"Closing in "</string>
+    <string name="time_info_to_start_point">Car arrival in:</string>
+    <string name="minutes">min</string>
+    <string name="order_reg">Order registration ...</string>
+    <string name="btn_cache">Cash</string>
+    <string name="btn_bon">Bonuses</string>
+    <string name="btn_card">Card</string>
+    <string name="no_t">not selected</string>
+    <string name="upd_available">Update available</string>
+    <string name="upd_available_promt">A new version of the application is available. Do you want to update now?</string>
+    <string name="upd_available_ok">Update</string>
+    <string name="upd_available_cancel">Cancel</string>
+    <string name="add_cost_fin">Want it faster?</string>
+    <string name="add_cost_fin_20">Click the \'OK\' button to increase the cost of the trip by 20 UAH</string>
+    <string name="add_cost_fin_60">You have already ordered this route. Add and order again?</string>
+    <string name="double_order">Repeat order</string>
+    <string name="add_cost_fin_45">Order is possible only with payment by bank card with an additional charge of 45 UAH. Calculate and order?</string>
+    <string name="black_list_message_err">Orders are only possible with payment by credit card</string>
+    <string name="black_list">Order error</string>
+    <string name="finish_info">Order cancelled</string>
+    <string name="no_options">Your order does not have any additional options</string>
+    <string name="check_cost_message">Please wait, getting trip cost...</string>
 </resources>
