--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.775</string>
-    <string name="version">Версія: 1.775</string>
+    <string name="version_code">1.776</string>
+    <string name="version">Версія: 1.776</string>
 
     <string name="app_name">Таксі Доставка</string>
 
@@ -62,7 +62,7 @@
     <string name="help">Підтримка</string>
     <string name="show_to_point">Вкажіть місце призначення</string>
     <string name="change">по GPS</string>
-    <string name="on_city">"по місту."</string>
+    <string name="on_city">"по місту"</string>
     <string name="on_city_tv">"по місту"</string>
     <string name="help_button">Підтримка</string>ё
     <string name="try_again">Перезавантажити</string>
@@ -108,7 +108,7 @@
     <string name="WIRES">Провід</string>
     <string name="SMOKE">Я куритиму</string>
 
-    <string name="add_services">Додатково</string>
+    <string name="add_services">Опції</string>
     <string name="time_limit">Превышение времени выполнения</string>
     <string name="slow_internet">Низька швидкість інтернету</string>
     <string name="update_message">Необхідно провести оновлення</string>
@@ -133,12 +133,13 @@
     <string name="no_routs">Немає маршрутів</string>
     <string name="cheng">Змінити</string>
     <string name="delete_routs">видалити</string>
-    <string name="text_result">Інформація про подорож</string>
+    <string name="text_result">Ваш маршрут</string>
     <string name="btn_again_text">Замовити ще</string>
     <string name="textStatus">Статус замовлення</string>
     <string name="cancel_order">Скасувати замовлення</string>
     <string name="ex_st_1">Очікується пошук машини (для попереднього замовлення)</string>
     <string name="ex_st_2">Знайдена машина.</string>
+    <string name="ex_st_2_1">Машина подана на посадку. Виходьте на Вас чекає водій. </string>
     <string name="ex_st_3">" Номер авто: "</string>
     <string name="ex_st_4">" Телефон водія: "</string>
     <string name="ex_st_5">" Очікуваний час подачі: "</string>
@@ -169,7 +170,7 @@
     <string name="SA_user_text">Користувач: </string>
     <string name="SA_email">Електронна пошта: </string>
     <string name="SA_phone_text">"Телефон: </string>
-    <string name="black_list_message">Вибачьте, Ви не можете замовляти подорожі. За інформацією зверніться до оператора.</string>
+    <string name="black_list_message">Вибачьте, Ви не можете замовляти поїздки. За інформацією зверніться до оператора.</string>
     <string name="action_help">ДОПОМОГА</string>
     <string name="cost_of_road">Вартість поїздки вибраним маршрутом складе</string>
     <string name="btn_geo_text">Доступ до геопозиції</string>
@@ -192,9 +193,9 @@
     <string name="close_resone_9">Знятий клієнтом</string>
     <string name="close_resone_from">"Від "</string>
     <string name="close_resone_to">" -> "</string>
-    <string name="close_resone_cost">", вартість: "</string>
-    <string name="close_resone_time">", время заказу: "</string>
-    <string name="close_resone_text">", стан: "</string>
+    <string name="close_resone_cost">"вартість: "</string>
+    <string name="close_resone_time">"время заказа: "</string>
+    <string name="close_resone_text">"стан: "</string>
     <string name="startPoint">Місце посадки</string>
     <string name="my_bonus">"Доступно бонусів: "</string>
     <string name="add_bonus">"Вам нараховано"</string>
@@ -289,11 +290,27 @@
     <string name="drag_marker">Для уточнення місцезнаходження пересувайте маркер</string>
     <string name="drag_marker_bottom">Натисніть на маркер та перемістіть його для уточнення розташування</string>
     <string name="menu_city">Заказ </string>
-    <string name="city_kyiv">м.Київ та область</string>
-    <string name="city_dnipro">м.Дніпро</string>
-    <string name="city_odessa">м.Одеса</string>
-    <string name="city_zaporizhzhia">м.Запоріжжя</string>
-    <string name="city_cherkasy">м.Черкаси</string>
+    <string name="city_kyiv">Київ та область</string>
+    <string name="city_cherkassy">Черкаси</string>
+    <string name="city_odessa">Одеса</string>
+    <string name="city_zaporizhzhia">Запоріжжя</string>
+    <string name="city_dnipro">Дніпро</string>
+    <string name="city_lviv">Львів</string>
+    <string name="city_ivano_frankivsk">Івано-Франківськ</string>
+    <string name="city_vinnytsia">Вінниця</string>
+    <string name="city_poltava">Полтава</string>
+    <string name="city_sumy">Суми</string>
+    <string name="city_kharkiv">Харків</string>
+    <string name="city_chernihiv">Чернігів</string>
+    <string name="city_rivne">Рівне</string>
+    <string name="city_ternopil">Тернопіль</string>
+    <string name="city_khmelnytskyi">Хмельницький</string>
+    <string name="city_zakarpattya">Ужгород</string>
+    <string name="city_zhytomyr">Житомир</string>
+    <string name="city_kropyvnytskyi">Кропивницький</string>
+    <string name="city_mykolaiv">Миколаїв</string>
+    <string name="city_chernivtsi">Чернівці</string>
+    <string name="city_lutsk">Луцьк</string>
     <string name="tail1">Карти для міста \'</string>
     <string name="tail2">\' успішно завантажено</string>
     <string name="rout_fin">Виберіть із списку номер будинку</string>
@@ -330,13 +347,13 @@
     <string name="upload">Завантаження оновлення...</string>
     <string name="update_ok">У Вас встановлена актуальна версія. Немає необхідності оновлювати програму.</string>
     <string name="phone_driver">Звонок водію</string>
-    <string name="auto_info">, авто</string>
+    <string name="auto_info">авто</string>
     <string name="city_no_cards">Оплата банківськими картками недоступна у цьому населеному пункті. Ми повідомимо Вас коли оплата банківськими картками стане доступною.</string>
-    <string name="pos_k">вул. Хрещатик 16 місто Київ\t</string>
-    <string name="pos_d">просп.Дмитра Яворницького (Карла Маркса), буд.52, місто Дніпро\t</string>
-    <string name="pos_o">вул.Пантелеймонівська, буд. 64, місто Одеса\t</string>
-    <string name="pos_z">просп. Соборний, буд. 139, місто Запоріжжя\t</string>
-    <string name="pos_c">вул.Байди Вишневецького, буд.36, місто Черкаси\t</string>
+    <string name="pos_k">вул. Хрещатик 16, м.Київ\t</string>
+    <string name="pos_d">просп.Дмитра Яворницького (Карла Маркса), буд.52, м.Дніпро\t</string>
+    <string name="pos_o">вул.Пантелеймонівська, буд. 64, м.Одеса\t</string>
+    <string name="pos_z">просп. Соборний, буд. 139, м.Запоріжжя\t</string>
+    <string name="pos_c">вул.Байди Вишневецького, буд.36, м.Черкаси\t</string>
     <string name="cancel_gps">Скасувати</string>
     <string name="ok_error">Зрозуміло</string>
     <string name="to_nal_payment">Ви маєте обмеження на суму замовлення за цим видом розрахунку. Для зміни зверніться до оператора. Зараз замовити за готівку?</string>
@@ -354,10 +371,10 @@
     <string name="cancel_2">Запит на скасування замовлення надіслано. Вимагає підтвердження клієнтом скасування диспетчерської.</string>
     <string name="cancel_3">Запит на скасування замовлення надіслано. Статус поїздки дізнайтесь у диспетчера.</string>
     <string name="test_city">Тест</string>
-    <string name="pay_method_message_main">Оплата за поїздку</string>
-    <string name="pay_method_message_bonus">бонусами. Приємної подорожі.</string>
-    <string name="pay_method_message_card">банківською карткою. Приємної подорожі.</string>
-    <string name="pay_method_message_nal">готівкою водію. Приємної подорожі.</string>
+    <string name="pay_method_message_main"></string>
+    <string name="pay_method_message_bonus">бонусами</string>
+    <string name="pay_method_message_card">банківською карткою</string>
+    <string name="pay_method_message_nal">готівкою водію</string>
     <string name="location_on">Увімкніть ТОЧНЕ визначення місцезнаходження в Дозволах</string>
     <string name="start_t">Старт</string>
     <string name="base_onl_t">Базовий онлайн</string>
@@ -409,4 +426,45 @@
     <string name="on_now">На даний момент</string>
     <string name="on">На</string>
     <string name="time_order">" Подача автомобіля на "</string>
+    <string name="pos_l">пл. Міцкевича, 8, м.Львів\n</string>
+    <string name="pos_h">"вул. Сумська , 5, м.Харків"</string>
+    <string name="pos_m">"вул. Адміральська, 27, м.Миколаїв"</string>
+    <string name="pos_v">вул. Соборна, 50, м. Вінниця</string>
+    <string name="pos_s">вул. Соборна, 43, м.Суми</string>
+    <string name="pos_ch">вул. Коцюбинського, 58, м. Чернігів</string>
+    <string name="pos_if">вул. Незалежності, 17, Івано-Франківськ</string>
+    <string name="pos_p">пл. Незалежності, 5, м. Полтава</string>
+    <string name="pos_r">"вул. Соборна, 137, м.Рівне"</string>
+    <string name="pos_t">вул. Перля, 3, м.Тернопіль</string>
+    <string name="pos_kh">вул. Чорновола, 7, м.Хмельницький</string>
+    <string name="pos_uz">вул. Новака, 14, м.Ужгород</string>
+    <string name="pos_zt">вул. Східна, 78, м.Житомир</string>
+    <string name="pos_kr">вул. Шевченка, 15, м.Кропивницький</string>
+    <string name="pos_chr">вул. Худякова, 1, м.Чернівці</string>
+    <string name="pos_ltk">вул. Замкова, 7, м.Луцьк</string>
+    <string name="text_cost">Оплата</string>
+    <string name="textStatusCar">Інформація про авто</string>
+    <string name="timer_finished">Таймер завершено</string>
+    <string name="close_timer">"Закриття через "</string>
+    <string name="time_info_to_start_point">Прибуття авто через:</string>
+    <string name="minutes">хв</string>
+    <string name="order_reg">Реєстрація замовлення...</string>
+    <string name="btn_cache">Готівка</string>
+    <string name="btn_bon">Бонусами</string>
+    <string name="btn_card">Картою</string>
+    <string name="no_t">не обрано</string>
+    <string name="upd_available">Доступно оновлення</string>
+    <string name="upd_available_promt">Доступна нова версія додатка. Хочете оновити зараз?</string>
+    <string name="upd_available_ok">Оновити</string>
+    <string name="upd_available_cancel">Відміна</string>
+    <string name="add_cost_fin">Хочете швидше?</string>
+    <string name="add_cost_fin_20">Натисніть кнопку \'Ок\', щоб підняти вартість подорожі на 20 грн</string>
+    <string name="add_cost_fin_60">Ви вже замовляли такий маршрут. Додати та замовити заново?</string>
+    <string name="double_order">Повторне замовлення</string>
+    <string name="add_cost_fin_45">Замовлення можливе лише з оплатою банківською карткою з доплатою 45 грн. Розрахувати та замовити?</string>
+    <string name="black_list_message_err">Замовлення можливе лише з оплатою банківською карткою.</string>
+    <string name="black_list">Помилка замовлення</string>
+    <string name="finish_info">Замовлення знято</string>
+    <string name="no_options">У Вашому замовленні немає додаткових опцій</string>
+    <string name="check_cost_message">Чекайте, йде розрахунок вартості поїздки...</string>
 </resources>
