--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.775</string>
-    <string name="version">Версия: 1.775</string>
+    <string name="version_code">1.776</string>
+    <string name="version">Версия: 1.776</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -62,7 +62,7 @@
     <string name="help">Поддержка</string>
     <string name="show_to_point">Укажите место назначения</string>
     <string name="change">по GPS</string>
-    <string name="on_city">"по городу."</string>
+    <string name="on_city">"по городу"</string>
     <string name="on_city_tv">"по городу"</string>
     <string name="help_button">Поддержка</string>
     <string name="try_again">Перезагрузить</string>
@@ -108,7 +108,7 @@
     <string name="WIRES">Провод</string>
     <string name="SMOKE">Я буду курить</string>
 
-    <string name="add_services">Дополнительно</string>
+    <string name="add_services">Опции</string>
     <string name="time_limit">Превышение времени выполнения</string>
     <string name="slow_internet">Низкая скорость интернета</string>
     <string name="update_message">Необходимо произвести обновление</string>
@@ -133,12 +133,13 @@
     <string name="no_routs">Нет маршрутов</string>
     <string name="cheng">Изменить</string>
     <string name="delete_routs">удалить</string>
-    <string name="text_result">Информация о поездке</string>
+    <string name="text_result">Ваш маршрут</string>
     <string name="btn_again_text">Заказать еще</string>
     <string name="textStatus">Статус заказа</string>
     <string name="cancel_order">Отменить заказ</string>
     <string name="ex_st_1">Ожидается поиск машины (для предварительного заказа)</string>
     <string name="ex_st_2">Найденная машина.</string>
+    <string name="ex_st_2_1">Машина подана на посадку. Выходите Вас ожидет водитель. </string>
     <string name="ex_st_3">" Номер авто: "</string>
     <string name="ex_st_4">" Телефон водителя: "</string>
     <string name="ex_st_5">" Ожидаемое время подачи: "</string>
@@ -169,7 +170,7 @@
     <string name="SA_user_text">Пользователь:</string>
     <string name="SA_email">Электронная почта:</string>
     <string name="SA_phone_text">"Телефон:</string>
-    <string name="black_list_message">Извините, вы не можете заказывать путешествия. За информацией обратитесь к оператору.</string>
+    <string name="black_list_message">Извините, вы не можете заказывать поездки. За информацией обратитесь к оператору.</string>
     <string name="action_help">ПОМОЩЬ</string>
     <string name="cost_of_road">Стоимость поездки по выбранному маршруту составит</string>
     <string name="btn_geo_text">Доступ к геопозиции</string>
@@ -192,9 +193,9 @@
     <string name="close_resone_9">Снят клиентом</string>
     <string name="close_resone_from">"От "</string>
     <string name="close_resone_to">" -> "</string>
-    <string name="close_resone_cost">", стоимость: "</string>
-    <string name="close_resone_time">", время заказа: "</string>
-    <string name="close_resone_text">", состояние: "</string>
+    <string name="close_resone_cost">"стоимость: "</string>
+    <string name="close_resone_time">"время заказа: "</string>
+    <string name="close_resone_text">"статус: "</string>
     <string name="startPoint">Место посадки</string>
     <string name="my_bonus">"Доступно бонусов: "</string>
     <string name="add_bonus">"Вам начислено"</string>
@@ -289,11 +290,27 @@
     <string name="drag_marker">Для уточнения местоположения передвигайте маркер</string>
     <string name="drag_marker_bottom">Нажмите на маркер и переместите его для уточнения местоположения</string>
     <string name="menu_city">Заказ </string>
-    <string name="city_kyiv">г.Киев и области</string>
-    <string name="city_dnipro">г.Днепр</string>
-    <string name="city_odessa">г.Одесса</string>
-    <string name="city_zaporizhzhia">г.Запорожье</string>
-    <string name="city_cherkasy"> г.Черкассы</string>
+    <string name="city_kyiv">Киев и область</string>
+    <string name="city_cherkassy">Черкассы</string>
+    <string name="city_odessa">Одесса</string>
+    <string name="city_zaporizhzhia">Запорожье</string>
+    <string name="city_dnipro">Днепр</string>
+    <string name="city_lviv">Львов</string>
+    <string name="city_ivano_frankivsk">Ивано-Франковск</string>
+    <string name="city_vinnytsia">Винница</string>
+    <string name="city_poltava">Полтава</string>
+    <string name="city_sumy">Сумы</string>
+    <string name="city_kharkiv">Харьков</string>
+    <string name="city_chernihiv">Чернигов</string>
+    <string name="city_rivne">Ровно</string>
+    <string name="city_ternopil">Тернополь</string>
+    <string name="city_khmelnytskyi">Хмельницкий</string>
+    <string name="city_zakarpattya">Ужгород</string>
+    <string name="city_zhytomyr">Житомир</string>
+    <string name="city_kropyvnytskyi">Кропивницкий</string>
+    <string name="city_mykolaiv">Николаев</string>
+    <string name="city_chernivtsi">Черновцы</string>
+    <string name="city_lutsk">Луцк</string>
     <string name="tail1">Карты для города \'</string>
     <string name="tail2">\' успешно загружены</string>
     <string name="rout_fin">Выберите из списка номер дома</string>
@@ -330,13 +347,13 @@
     <string name="upload">Скачивание обновления ...</string>
     <string name="update_ok">У Вас установлена актуальная версия. Нет необходимости обновлять приложение.</string>
     <string name="phone_driver">Звонок водителю</string>
-    <string name="auto_info">, авто</string>
+    <string name="auto_info">авто</string>
     <string name="city_no_cards">Оплата банковскими картами недоступна в этом населенном пункте. Мы уведомим Вас когда оплата банковскими картами станет доступной.</string>
     <string name="pos_k">ул. Крещатик, 16 город Киев\t</string>
     <string name="pos_d">просп.Дмитрия Яворницкого (Карла Маркса), д.52, город Днепр\t</string>
-    <string name="pos_o">ул.Пантелеймоновская, дом. 64, город Одесса\t</string>
-    <string name="pos_z">просп. Соборный, дом. 139, город Запорожье\t</string>
-    <string name="pos_c">ул.Байды Вишневецкого, д.36, город Черкассы\t</string>
+    <string name="pos_o">ул.Пантелеймоновская, дом. 64, г.Одесса\t</string>
+    <string name="pos_z">просп. Соборный, дом. 139, г.Запорожье\t</string>
+    <string name="pos_c">ул.Байды Вишневецкого, д.36, г.Черкассы\t</string>
     <string name="cancel_gps">Отменить</string>
     <string name="ok_error">Понятно</string>
     <string name="to_nal_payment">У вас есть ограничение на сумму заказа по этому виду расчета. Для изменении обратитесь к операторам. Сейчас заказать за наличные?</string>
@@ -354,10 +371,10 @@
     <string name="cancel_2">Запрос на отмену заказа отправлен. Требует подтверждения клиентом отмены диспетчерской.</string>
     <string name="cancel_3">Запрос на отмену заказа отправлен. Статус поездки узнайте у диспетчера.</string>
     <string name="test_city">Тест</string>
-    <string name="pay_method_message_main">Оплата за поездку</string>
-    <string name="pay_method_message_bonus">бонусами. Приятной поездки.</string>
-    <string name="pay_method_message_card">банковской картой. Приятной поездки.</string>
-    <string name="pay_method_message_nal">наличными водителю. Приятной поездки.</string>
+    <string name="pay_method_message_main"></string>
+    <string name="pay_method_message_bonus">бонусами</string>
+    <string name="pay_method_message_card">банковской картой</string>
+    <string name="pay_method_message_nal">наличными водителю</string>
     <string name="location_on">Включите ТОЧНОЕ определение местонахождения в Разрешениях</string>
     <string name="start_t">Старт</string>
     <string name="base_onl_t">Базовий онлайн</string>
@@ -410,4 +427,45 @@
     <string name="on_now">На сейчас</string>
     <string name="on">На</string>
     <string name="time_order">" Подача автомобиля на "</string>
+    <string name="pos_l">пл. Мицкевича, 8, г.Львов</string>
+    <string name="pos_h">"ул. Сумская , 5, г.Харьков"</string>
+    <string name="pos_m">"ул. Адмиральская, 27, г.Николаев"</string>
+    <string name="pos_v">ул. Соборная, 50, г.Винница</string>
+    <string name="pos_s">ул. Соборная, 43, г.Сумы</string>
+    <string name="pos_ch">ул. Коцюбинского, 58, г.Чернигов</string>
+    <string name="pos_if">ул. Независимости, 17, г.Ивано-Франковск</string>
+    <string name="pos_p">пл. Независимости, 5, г.Полтава</string>
+    <string name="pos_r">"ул. Соборная, 137, г.Ровно"</string>
+    <string name="pos_t">ул. Перля, 3, г.Тернополь</string>
+    <string name="pos_kh">ул. Черновола, 7, г.Хмельницкий</string>
+    <string name="pos_uz">ул. Новака, 14, г.Ужгород</string>
+    <string name="pos_zt">ул. Восточная, 78, г.Житомир</string>
+    <string name="pos_kr">ул. Шевченко, 15, г.Кропивницкий</string>
+    <string name="pos_chr">ул. Худякова, 1, г.Черновцы</string>
+    <string name="pos_ltk">ул. Замковая, 7, г.Луцк</string>
+    <string name="text_cost">Оплата</string>
+    <string name="textStatusCar">Информация об авто</string>
+    <string name="timer_finished">Таймер завершен</string>
+    <string name="close_timer">"Закрытие через "</string>
+    <string name="time_info_to_start_point">Прибытие авто через:</string>
+    <string name="minutes">мин</string>
+    <string name="order_reg">Регистрация заказа ...</string>
+    <string name="btn_cache">Наличные</string>
+    <string name="btn_bon">Бонусами</string>
+    <string name="btn_card">Картой</string>
+    <string name="no_t">не выбран</string>
+    <string name="upd_available">Доступно обновление</string>
+    <string name="upd_available_promt">Доступна новая версия приложения. Хотите обновить сейчас?</string>
+    <string name="upd_available_ok">Обновить</string>
+    <string name="upd_available_cancel">Отмена</string>
+    <string name="add_cost_fin">Хотите быстрее?</string>
+    <string name="add_cost_fin_20">Нажмите кнопку \'Ок\' чтобы поднять стоимость поездки на 20 грн</string>
+    <string name="add_cost_fin_60">Вы уже заказывали такой маршрут. Добавить и заказать заново?</string>
+    <string name="double_order">Повторный заказ</string>
+    <string name="add_cost_fin_45">Заказ возможен только с оплатой банковской картой c доплатой 45 грн.  Рассчитать и заказать?</string>
+    <string name="black_list_message_err">Заказ возможен только с оплатой банковской картой</string>
+    <string name="black_list">Ошибка заказа</string>
+    <string name="finish_info">Заказ снят</string>
+    <string name="no_options">В Вашем заказе нет дополнительных опций</string>
+    <string name="check_cost_message">Ожидайте, идет расчет стоимости поездки ...</string>
 </resources>
