--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.782</string>
-    <string name="version">Version: 1.782</string>
+    <string name="version_code">1.783</string>
+    <string name="version">Version: 1.783</string>
 
     <string name="app_name">Taxi Dostavka</string>
     <string name="alfa_test">(Alpha testing)</string>
@@ -481,4 +481,6 @@
     <string name="item_settings">Settings</string>
     <string name="save_btn">Save</string>
     <string name="close">Close</string>
+    <string name="ok_add_cost">Confirm</string>
+    <string name="add_cost_btn">I want it faster</string>
 </resources>
