--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.785</string>
-    <string name="version">Версия: 1.785</string>
+    <string name="version_code">1.786</string>
+    <string name="version">Версия: 1.786</string>
 
     <string name="app_name">Такси Доставка</string>
 
@@ -41,7 +41,7 @@
     <string name="gps_ok">Определение геопозиции включено</string>
     <string name="cancel_button">Нет, спасибо</string>
     <string name="gps_on">Включить</string>
-    <string name="gps_info">Чтобы улучшить работу программы, включите на устройстве геолокацию Google</string>
+    <string name="gps_info">Чтобы улучшить работу программы, разрешите доступ на устройстве до Вашей геолокации</string>
     <string name="gps_on_button">включит gps</string>
     <string name="wellcome">Сформируйте маршрут или выберите любимый.</string>
     <string name="verify_phone">Проверка телефона</string>
@@ -81,13 +81,13 @@
     <string name="good_day">Мои приветствия. Нашел великолепное приложение для поездок на такси. \n \n Советую попробовать по ссылке в официальном магазине Google: \n\n https://play.google.com/store/apps/details?id=com.taxi.easy.ua \n\n Хорошего дня. \n Еще увидимся.</string>
     <string name="share">Посоветовать другу приложение...</string>
     <string name="no_email_agent">Почтовый клиент не установлен.</string>
-    <string name="check_position">Подождите, происходит определение Вашего местоположения...</string>
+    <string name="check_position">ПодоОжидайте, происходит определение Вашего местоположения...</string>
     <string name="my_adresses">Избранные</string>
     <string name="make_order_message">Совершите хотя бы одну поездку</string>
     <string name="to_adress_message">Куда едем?</string>
     <string name="coastMarkersMessage">"Стоимость путешествия по маршруту"</string>
     <string name="please_phone_message">Приложение передает номер вашего мобильного телефона для включения функции заказа такси. Нажав кнопку Сохранить, вы подтверждаете согласие на передачу номера телефону диспетчеру для поиска автомобиля и сохранения его для следующих заказов.</string>
-    <string name="check_message">Ждите, идет подключение.</string>
+    <string name="check_message">Ожидайте, идет подключение.</string>
     <string name="find_of_map">Попробуйте найти на карте</string>
     <string name="end_point_marker">Место назначения</string>
     <string name="error_firebase_start">Ошибка проверки. Наберите оператора через "ПОМОЩЬ"</string>
@@ -263,7 +263,7 @@
     <string name="return_pay">Возвращение заказа.</string>
     <string name="return_pay_error">Ошибка возврата платежа.</string>
     <string name="btn_pay_return">Вернуть оплату</string>
-    <string name="check_pay_return">Ждите возврата платежа</string>
+    <string name="check_pay_return">Ожидайте возврата платежа</string>
     <string name="btn_return">Вернуться к приложению</string>
     <string name="fondy_back">Для заказа поездки после успешной оплаты или для выбора другого способа платежа - нажмите на своем телефоне кнопку "Вернуться" (стрелочка "Назад").</string>
     <string name="fondy_back_ver">После успешной проверки - нажмите на своем телефоне кнопку "Вернуться" (стрелочка "Назад").</string>
@@ -332,7 +332,7 @@
     <string name="author_about">Об авторе</string>
     <string name="foreign_countries">Другое</string>
     <string name="order_in">"заказ в "</string>
-    <string name="checking">Ждите, идет проверка данных.</string>
+    <string name="checking">Ожидайте, идет проверка данных.</string>
     <string name="time_out_text">Отмена поездки по таймауту оплаты.</string>
     <string name="pay_cancel">Поездка отменена из-за отсутствия успешной  оплаты в течении отведенного тайминга. Попробуйте еще.</string>
     <string name="ex_st_canceled">Заказ отменен. Попробуйте еще.</string>
@@ -362,8 +362,8 @@
     <string name="tarif">Тариф:</string>
     <string name="tar">Тариф</string>
     <string name="double_order_error">Дублирование заказа. Вы не можете создавать подобный заказ, пока не нашлась машина по предварительному заказу.</string>
-    <string name="user_cards">Ваши карты для оплаты путешествий:</string>
-    <string name="error_payment_card">Ошибка обработки платежа. Выберите вторую карту или закажите путешествие за наличные деньги.</string>
+    <string name="user_cards">Ваши карты для оплаты поездок:</string>
+    <string name="error_payment_card">Ошибка обработки платежа. Выберите другую карту или закажите поездку за наличные деньги.</string>
     <string name="nal_payment_btn">За наличные деньги</string>
     <string name="new_card_btn">Новая карта</string>
     <string name="chois_card_btn">Выбранной картой</string>
@@ -393,17 +393,17 @@
     <string name="order_continue">Продолжить просмотр</string>
     <string name="anr_message">Извините, пришлось немного подождать</string>
     <string name="change_tarrif">Выберите другой тариф</string>
-    <string name="checkout_status">Ждите, идет проверка статуса заказа...</string>
+    <string name="checkout_status">Ожидайте, идет проверка статуса заказа...</string>
     <string name="check_order_mes">Ожидайте регистрации заказа...</string>
     <string name="sent_cancel_message">Запрос на отмену заказа отправлен</string>
     <string name="aplay_card_message">Ваша карта принята и отправлена ​​на проверку. Скоро она станет доступна для оплаты путешествий.</string>
-    <string name="status_checkout_message">Запрошено обновление статуса. Ждите или уточните оператора</string>
+    <string name="status_checkout_message">Запрошено обновление статуса. Ожидайте или уточните оператора</string>
     <string name="update_finish_mes">Обновление завершено. Программа будет перезапущена.</string>
     <string name="udate_cancel">Обновить список</string>
     <string name="order_to_cancel">Заказы в работе</string>
     <string name="order_status">Перейти к заказу</string>
     <string name="order_to_cancel_review">Перейти к просмотру</string>
-    <string name="order_to_cancel_true">У Вас есть запланированные путешествия</string>
+    <string name="order_to_cancel_true">У Вас есть запланированные поездки</string>
     <string name="no_house_vis_mes">Запрошенный адрес не найден. Попробуйте другой или нажмите зеленую кнопку со стрелкой "назад"</string>
     <string name="no_adrees_mes">Уточните адрес или наберите операторов</string>
     <string name="pos_f">DW631 47, 00-514 Warszawa, Poland\t</string>
@@ -467,7 +467,7 @@
     <string name="black_list">Ошибка заказа</string>
     <string name="finish_info">Заказ снят</string>
     <string name="no_options">В Вашем заказе нет дополнительных опций</string>
-    <string name="check_cost_message">Ждите, идет расчет стоимости поездки...</string>
+    <string name="check_cost_message">Ожидайте, идет расчет стоимости поездки...</string>
     <string name="android_version">Версия Андроида:</string>
     <string name="device">Устройство:</string>
     <string name="time_car_found">Время поиска машины подошло к концу</string>
@@ -485,4 +485,7 @@
     <string name="close">Закрыть</string>
     <string name="ok_add_cost">Подтвердить</string>
     <string name="add_cost_btn">Хочу быстрее</string>
+    <string name="addCostBonusMessage">Для более быстрого поиска авто закажите за наличные или с оплатой поездки картой</string>
+    <string name="recounting_order">Происходит перерасчет заказа</string>
+    <string name="ex_st_finished">Ваша поездка завершена. Спасибо что воспользовались нашими услугами. Ждем Вас в следующий раз.</string>
 </resources>
